// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots default as links 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div
          data-css-pp5aob=""
          onKeyDown={[Function]}
          role="tablist"
          tabIndex="0"
        >
          <button
            data-css-1qr8tem=""
            tabIndex="-1"
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret left icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 12l5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
                />
              </svg>
            </div>
          </button>
          <a
            aria-selected={true}
            data-css-bn3734=""
            href="https://duckduckgo.com"
            id={1}
            onClick={[Function]}
            role="tab"
            tabIndex="-1"
          >
            <div
              data-css-sgoz4b=""
              tabIndex="-1"
            >
              External link
              <span
                data-css-1s34vsj=""
              />
            </div>
          </a>
          <button
            data-css-4l6fne=""
            tabIndex="-1"
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret right icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots default default 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div>
          <div
            data-css-pp5aob=""
            onKeyDown={[Function]}
            role="tablist"
            tabIndex="0"
          >
            <button
              data-css-1qr8tem=""
              tabIndex="-1"
            >
              <div
                data-css-otejxm=""
              >
                <svg
                  aria-label="caret left icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 12l5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
                  />
                </svg>
              </div>
            </button>
            <button
              aria-selected={true}
              data-css-bn3734=""
              id="example1"
              onClick={[Function]}
              role="tab"
              tabIndex="-1"
            >
              <div
                data-css-sgoz4b=""
                tabIndex="-1"
              >
                Menu 1
                <span
                  data-css-1s34vsj=""
                />
              </div>
            </button>
            <button
              aria-selected={false}
              data-css-dp4ver=""
              id="example2"
              onClick={[Function]}
              role="tab"
              tabIndex="-1"
            >
              <div
                data-css-sgoz4b=""
                tabIndex="-1"
              >
                Menu 2
                <span
                  data-css-1s34vsj=""
                />
              </div>
            </button>
            <button
              aria-selected={false}
              data-css-dp4ver=""
              id="example3"
              onClick={[Function]}
              role="tab"
              tabIndex="-1"
            >
              <div
                data-css-sgoz4b=""
                tabIndex="-1"
              >
                Menu 3
                <span
                  data-css-1s34vsj=""
                />
              </div>
            </button>
            <button
              aria-selected={false}
              data-css-dp4ver=""
              id="example4"
              onClick={[Function]}
              role="tab"
              tabIndex="-1"
            >
              <div
                data-css-sgoz4b=""
                tabIndex="-1"
              >
                Menu 4
                <span
                  data-css-1s34vsj=""
                />
              </div>
            </button>
            <button
              aria-selected={false}
              data-css-dp4ver=""
              id="example5"
              onClick={[Function]}
              role="tab"
              tabIndex="-1"
            >
              <div
                data-css-sgoz4b=""
                tabIndex="-1"
              >
                Menu 5
                <span
                  data-css-1s34vsj=""
                />
              </div>
            </button>
            <button
              data-css-4l6fne=""
              tabIndex="-1"
            >
              <div
                data-css-otejxm=""
              >
                <svg
                  aria-label="caret right icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                  />
                </svg>
              </div>
            </button>
          </div>
          <div
            aria-labelledby="example3"
            role="tabpanel"
          >
            <div
              className="content"
            >
              Menu stuff 3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots default no items 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div
          data-css-pp5aob=""
          onKeyDown={[Function]}
          role="tablist"
          tabIndex="0"
        >
          <button
            data-css-1qr8tem=""
            tabIndex="-1"
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret left icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 12l5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
                />
              </svg>
            </div>
          </button>
          <button
            data-css-4l6fne=""
            tabIndex="-1"
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret right icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots style overrides list no borderBottom (style) 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div
          data-css-pp5aob=""
          onKeyDown={[Function]}
          role="tablist"
          style={
            Object {
              "borderBottom": "none",
            }
          }
          tabIndex="0"
        >
          <button
            data-css-1qr8tem=""
            tabIndex="-1"
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret left icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 12l5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
                />
              </svg>
            </div>
          </button>
          <button
            aria-selected={true}
            data-css-bn3734=""
            id="wow"
            onClick={[Function]}
            role="tab"
            tabIndex="-1"
          >
            <div
              data-css-sgoz4b=""
              tabIndex="-1"
            >
              Wow
              <span
                data-css-1s34vsj=""
              />
            </div>
          </button>
          <button
            data-css-4l6fne=""
            tabIndex="-1"
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret right icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots style overrides listItem disabled opacity (style) 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div
          data-css-pp5aob=""
          onKeyDown={[Function]}
          role="tablist"
          tabIndex="0"
        >
          <button
            data-css-1qr8tem=""
            tabIndex="-1"
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret left icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 12l5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
                />
              </svg>
            </div>
          </button>
          <button
            aria-selected={true}
            data-css-bn3734=""
            id="wow"
            onClick={[Function]}
            role="tab"
            style={
              Object {
                "opacity": 0.5,
              }
            }
            tabIndex="-1"
          >
            <div
              data-css-sgoz4b=""
              tabIndex="-1"
            >
              Disabled look
              <span
                data-css-1s34vsj=""
              />
            </div>
          </button>
          <button
            data-css-4l6fne=""
            tabIndex="-1"
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret right icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots style overrides panel disabled opacity (style) 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div>
          <div
            data-css-pp5aob=""
            onKeyDown={[Function]}
            role="tablist"
            tabIndex="0"
          >
            <button
              data-css-1qr8tem=""
              tabIndex="-1"
            >
              <div
                data-css-otejxm=""
              >
                <svg
                  aria-label="caret left icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 12l5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
                  />
                </svg>
              </div>
            </button>
            <button
              aria-selected={true}
              data-css-bn3734=""
              id="wow"
              onClick={[Function]}
              role="tab"
              style={
                Object {
                  "opacity": 0.5,
                }
              }
              tabIndex="-1"
            >
              <div
                data-css-sgoz4b=""
                tabIndex="-1"
              >
                Disabled look
                <span
                  data-css-1s34vsj=""
                />
              </div>
            </button>
            <button
              data-css-4l6fne=""
              tabIndex="-1"
            >
              <div
                data-css-otejxm=""
              >
                <svg
                  aria-label="caret right icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                  />
                </svg>
              </div>
            </button>
          </div>
          <div
            aria-labelledby="wow"
            role="tabpanel"
            style={
              Object {
                "border": "1px solid red",
              }
            }
          >
            This is the content
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
